# tvc-examples

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  pnpm-lock.yaml  rules.example.toml
apps/tvc-app/: Dockerfile  chainalysis.go  go.mod  main.go
apps/web/: .env.example  package.json
apps/web/app/: page.tsx  providers.tsx
apps/web/app/api/screen/: route.ts
apps/web/components/: Header.tsx  ProofBadge.tsx  ScreenedTransaction.tsx  ScreeningTool.tsx  SendETH.tsx
apps/web/db/: index.ts  schema.ts
apps/web/lib/: turnkey.ts  tvc.ts
src/: activity.rs  config.rs  keys.rs  main.rs  rules.rs  stamp.rs  tx.rs
tvc-chainalysis/: .gitignore  README.md  pnpm-lock.yaml  pnpm-workspace.yaml
tvc-chainalysis/apps/tvc-app/: .dockerignore  Dockerfile  chainalysis.go  go.mod  main.go  proof.go
tvc-chainalysis/apps/web/: .env.example  drizzle.config.ts  eslint.config.mjs  package.json
tvc-chainalysis/apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
tvc-chainalysis/apps/web/app/api/screen/: route.ts
tvc-chainalysis/apps/web/components/: Header.tsx  LoginButton.tsx  LoginPrompt.tsx  LogoutButton.tsx  ProofBadge.tsx  ScreenedTransaction.tsx  ScreeningHistory.tsx  ScreeningTool.tsx  SendETH.tsx  WalletAddress.tsx
tvc-chainalysis/apps/web/lib/: tvc.ts
tvc-cosign/: Cargo.toml  Dockerfile  README.md  rules.example.toml
tvc-cosign/src/: config.rs  keys.rs  main.rs  proof.rs  rules.rs  tx.rs
