[package]
name = "tvc-cosign"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-consensus = "2.1.1"
alloy-eips = "2.1.1"
alloy-primitives = { version = "1.6.0", features = ["serde"] }
alloy-rlp = "0.3.16"
axum = "0.8.9"
base64 = "0.22.1"
hex = "0.4.3"
hkdf = "0.13.0"
p256 = { version = "0.14.0", features = ["ecdsa"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["full"] }
